# ID3Lib

./: .gitignore  .gitmodules  CMakeLists.txt  config.h.cmake  config.h.in  index.html
doc/: CMakeLists.txt  Doxyfile.in  id3lib.css
include/id3/: id3lib_strings.h  io_decorators.h  utils.h
src/: CMakeLists.txt  field.cpp  field_integer.cpp  field_string_ascii.cpp  field_string_unicode.cpp  frame_parse.cpp  helpers.cpp  io_decorators.cpp  io_helpers.cpp  misc_support.cpp  mp3_parse.cpp  tag.cpp  tag_file.cpp  tag_parse_v1.cpp  utils.cpp  writers.cpp
