Project (id3lib-doc)

Set (ID3LIB_DOC_IMAGE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

Find_Package (Doxygen)

Set (DOXYGEN_HAVE_DOT "NO")
Set (VERSION ${ID3LIB_VERSION})

If (DOXYGEN_DOT_EXECUTABLE)
  Set (DOXYGEN_HAVE_DOT "YES")
EndIf (DOXYGEN_DOT_EXECUTABLE)

Find_File (
  DOXY_IN_FILE 
  NAMES Doxyfile.in
  PATHS ${CMAKE_CURRENT_SOURCE_DIR}
  NO_DEFAULT_PATH
  )

Find_File (
  ID3LIB_CSS_FILE
  NAMES id3lib.css
  PATHS ${CMAKE_CURRENT_SOURCE_DIR}
  NO_DEFAULT_PATH
  )

Set (DOXY_CONF_FILE ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

Configure_File (${DOXY_IN_FILE} ${DOXY_CONF_FILE} @ONLY)

Add_Custom_Target (
    id3lib-doc 
    ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONF_FILE}
    DEPENDS ${DOXYGEN_CONF_FILE}
    )
